FIX: prevent display of desktop ad on mobile
I tried to fix that before but made it completely wrong, as in the complete opposit of what i wanted to do. As a self punishment I wrote a test for it.

--- a/sass/_constants.sass
+++ b/sass/_constants.sass
@@ -172,6 +172,7 @@ $break-4: em(1120px) !default
 
 // *ad* breakpoint, px wanted
 $break-mobile-ad-width: em(768px) !default 
+$break-mobile-ad-max-width: em(767px) !default
 
 // for comments
 $comments__break-overlap:  em(768px)
